# research

audio_transcription_research/: README.md  notes.md
audio_transcription_research/implementation/: README.md  pyproject.toml  transcribe.py
gpx_app_research/: notes.md  report.md
