[project]
name = "implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper==1.1.0",
    "pyannote-audio==3.3.2",
    "requests>=2.32.5",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "whisperx==3.3.1",
]
